
|==================|
|= CHANGELOG GEPI =|
|==================|

Gepi-master (Version de développement)
===========================
Gestion:
- Possibilité de choisir l'adresse mail destinataire de l'information comme quoi un changement d'adresse mail responsable ou élèev a eu lieu.

Gepi-1.6.3 (17/06/2013)
===========================
Bulletins:
- Possibilité de choisir ce que l'on souhaite faire apparaitre sur les bulletins
  en ce qui concerne les absences (total, absences non-justifiées et/ou retards).
- Possibilité de corriger des notes de bulletins en période partiellement close.
- PDF: Ajout d'un ordre d'affichage des colonnes avec appréciation en premier.
- Possibilité d'afficher la moyenne annuelle des enseignements sur les bulletins PDF.
- Possibilité d'afficher les moyennes de l'élève pour les périodes précédentes et annuelle sur les bulletins HTML.
- Possibilité de valider en tant qu'admin les corrections de bulletins proposées.

Carnets de notes
- Possibilité de corriger des notes de CN en période partiellement close.
- Possibilité de copier un devoir et ses notes.
- Ajout d'un lien vers toutes les évaluations de l'année.
- Grisage par défaut des paramètres spécifiques HTML/PDF pour l'impression des relevés de notes.

Graphes:
- Possibilité de choisir la taille de la police pour le champ de saisie de l'avis du conseil de classe.

Cahiers de textes
- Abandon du mode Wiki pour la saisie des notices du CdT
- Possibilité de n'afficher que le travail à faire ou que les compte-rendus en mode Toutes_matieres.

RSS:
- Accès au flux RSS CDT pour les responsables
- Possibilité de créer des flux RSS pour les élèves arrivés en cours d'année.
- Possibilité de signaler et visionner un flux RSS CDT élève en compte scolarité/cpe/pp.

Alertes/informations:
- Ajout d'un module permettant de déposer des alertes à la façon d'une messagerie mail à l'attention de personnels choisis.